# rofi_columns

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac
doc/: rofi_columns-manpage.markdown  rofi_columns.1
source/: rofi_columns.c
